<resources>
    <string name="app_name">M Tools</string>
    <string name="copy_url_to_here">复制单曲或歌单链接到这里</string>
    <string name="detect_url">检测</string>
    <string name="song_name">歌曲名称</string>
    <string name="singer_name">歌手</string>
    <string name="album_image">专辑图</string>
    <string name="song_alias_name">歌曲别名</string>
    <string name="copy_music_url">复制链接</string>
    <string name="playlist_name">歌单名称</string>
    <string name="playlist_owner_name">歌单拥有者姓名</string>
    <string name="playlist_owner_cover_img">歌单创建者头像</string>
    <string name="recommend_to_friends">推荐给朋友</string>
    <string name="like">点赞</string>
    <string name="call_is_the_way">打电话才够直接！</string>
    <string name="netease_logo">网易云logo</string>
    <string name="link_ico">链接图标</string>
    <string name="favourite_list_text">显示喜欢的歌单名称</string>
    <string name="favourite_list_exitor">编辑喜欢的歌单名称</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="input_new_favourite_list_name">修改喜欢的歌单名称</string>
    <string name="input_search_content">输入搜索内容</string>
    <string name="search_img_btn">搜索按钮</string>
    <string name="comments_name">评论人昵称</string>
    <string name="comments_content">评论内容</string>
    <string name="comments_avatar_img">评论人头像</string>
    <string name="comments_time">评论时间</string>
    <string name="liked_count">点赞数</string>
    <string name="great_reviews">精彩评论</string>
</resources>
