<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="128dp">

            <ImageView
                android:id="@+id/playlist_cover_image"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/song_name" />


            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/playlist_cover_image"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/playlist_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorSongName"
                    android:textSize="24sp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:layout_below="@id/playlist_name_text"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/playlist_owner_avatar_image"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="4dp"
                        android:contentDescription="@string/playlist_owner_cover_img"/>

                    <TextView
                        android:id="@+id/playlist_owner_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorArtists"
                        android:text="@string/playlist_owner_name"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                </LinearLayout>


            </RelativeLayout>


        </RelativeLayout>


        <ListView
            android:id="@+id/playlist_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="20dp" />

    </LinearLayout>


</LinearLayout>