<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/favourite_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp">

        <TextView
        android:id="@+id/favourite_list_name_text"
        android:layout_width="0dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/edit_favourite_list_name"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:textSize="34sp" />

        <EditText
            android:id="@+id/favourite_list_name_edit"
            android:layout_width="0dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/done_favourite_list_name"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/input_new_favourite_list_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/edit_favourite_list_name"
            android:src="@drawable/round_edit_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/edit" />

        <ImageButton
            android:id="@+id/done_favourite_list_name"
            android:src="@drawable/round_done_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/done"
            android:visibility="gone" />


    </RelativeLayout>

    <ListView
        android:id="@+id/favourite_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp" />

</LinearLayout>