<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="128dp">

            <ImageView
                android:id="@+id/song_image"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/song_name" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/song_image"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/song_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/song_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorSongName"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/song_alias_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/song_alias_name"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:visibility="gone"
                    android:textColor="@color/colorSongAlias" />

                <TextView
                    android:id="@+id/artists_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorArtists"
                    android:text="@string/singer_name"
                    android:textAlignment="center"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>


        <SeekBar
            android:id="@+id/music_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <Button
                android:id="@+id/music_stop_button"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginEnd="48dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="48dp"
                android:background="@drawable/round_stop_24"/>

            <Button
                android:id="@+id/music_start_button"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="48dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_play_arrow_24"/>

            <Button
                android:id="@+id/music_pause_button"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:background="@drawable/round_pause_24"/>

            <Button
                android:id="@+id/music_download_button"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginEnd="48dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/round_cloud_download_24"/>


        </RelativeLayout>

        <ListView
            android:id="@+id/lyric_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>
